# WeChat-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
wechat_mcp/: __init__.py  config.py  core.py  server.py
