[project]
name = "wechat-mcp"
version = "0.1.0"
description = "MCP Server for WeChat — let AI read and send WeChat messages"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Lozzi", email = "jp7454yv4f-sudo@users.noreply.github.com"},
]
dependencies = [
    "mcp>=1.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.urls]
homepage = "https://github.com/jp7454yv4f-sudo/WeChat-mcp"
repository = "https://github.com/jp7454yv4f-sudo/WeChat-mcp"

[project.scripts]
wechat-mcp = "wechat_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wechat_mcp*"]
